--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "datasets",
+    "accelerate>=1.12.0",
+    "datasets==3.6.0",
+    "torch>=2.9.1",
     "transformers",
 ]
